# PyiMAi

./: README.md  pyproject.toml  setup.py
src/PyiMAi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pyimai/: Provides.py  __init__.py  cil.py  info.py  main.py  upload.py
